minor update to get the first element